@@ -19,6 +19,7 @@ Bugs fixed:
 - 2172023 mlogf call cleanups
 - 2172888 http content-length is not constrained
 - 2175426 possible int overflow
+- 2175507 sockaddr_un not allocated for localconnect server
 
 Changes in 1.3.2
 ================
